--- a/Case-01/case_01.html
+++ b/Case-01/case_01.html
@@ -31,14 +31,61 @@
             right: 0;
             bottom: 0;
         }
+        section>.main>div{
+            width: 11vw;
+            aspect-ratio: 1/1;
+            background: #F7F9F8;
+            border-radius: 100%;
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            top: 0;
+            margin: auto;
+        }
+        section>.main>div>div{
+            width: 5vw;
+            aspect-ratio: 1/1;
+            background: #E4181E;
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            top: 0;
+            margin: auto;
+        }
+        #mid-box {
+            width: 12vw;
+            aspect-ratio: 1/1;
+            background: #F7F9F8;
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            top: 0;
+            margin: auto;
+        }
+        #mid-circle{
+            width: 7vw;
+            aspect-ratio: 1/1;
+            background: #E4181E;
+            border-radius: 100%;
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            top: 0;
+            margin: auto;
+        }
     </style>
 </head>
 <body>
 <section>
-    <div class="main"><div></div></div>
-    <div class="main"><div></div></div>
-    <div class="main"><div></div></div>
-    <div class="main"><div></div></div>
+    <div class="main"><div><div></div></div></div>
+    <div class="main"><div><div></div></div></div>
+    <div class="main"><div><div></div></div></div>
+    <div class="main"><div><div></div></div></div>
 </section>
+    <div id="mid-box"><div id="mid-circle"></div></div>
 </body>
 </html>
