complete 1st part of Case-02

--- a/Case-02/case_02.html
+++ b/Case-02/case_02.html
@@ -9,7 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
+<header>
+    <img src="assets/images/Ijse_logo.png" title="ijse logo" alt="ijse logo" width="200">
+    <nav>
+        <dl>
+            <dd>Home</dd>
+            <dd>Services</dd>
+            <dd>Contacts</dd>
+            <dd>About Us</dd>
+        </dl>
+    </nav>
+</header>
 <script src="/fontawesome/js/all.min.js"></script>
 </body>
 </html>
