--- a/Case-03/case_03.html
+++ b/Case-03/case_03.html
@@ -9,7 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
+<div id="frame"><div></div></div>
+<section>
+    <div><span>Hello</span></div>
+    <div><span>Welcome To</span></div>
+    <div><span>Institute of Software Engineering</span></div>
+</section>
 <script src="/fontawesome/js/all.min.js"></script>
 </body>
 </html>
