--- a/Case-04/case_04.html
+++ b/Case-04/case_04.html
@@ -7,9 +7,27 @@
     <link rel="stylesheet" href="assets/styles/style.css">
     <link rel="stylesheet" href="/fontawesome/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
 </head>
 <body>
-
+<section>
+    <div class="TitleBar"><span>Card  1</span></div>
+    <div><span>Hello</span></div>
+</section>
+<section>
+    <div class="TitleBar"><span>Card  2</span></div>
+    <div><span>How</span></div>
+</section>
+<section>
+    <div class="TitleBar"><span>Card  3</span></div>
+    <div><span>Are</span></div>
+</section>
+<section>
+    <div class="TitleBar"><span>Card  4</span></div>
+    <div><span>You..?</span></div>
+</section>
 <script src="/fontawesome/js/all.min.js"></script>
 </body>
 </html>
