--- a/Case-06/case_06.html
+++ b/Case-06/case_06.html
@@ -9,7 +9,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
+<div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+</div>
 <script src="/fontawesome/js/all.min.js"></script>
 </body>
 </html>
