--- a/Case-01/case_01.html
+++ b/Case-01/case_01.html
@@ -3,120 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Case_01-A$</title>
-    <link rel="stylesheet" href="/normalize.css">
-    <style>
-        section{
-            width: 100vw;
-            height: 100vh;
-            position: relative;
-        }
-        section>.main{
-            height: 50%;
-            width: 50%;
-            position: absolute;
-        }
-        section>.main:nth-child(1){
-            background: #E4181E;
-        }
-        section>.main:nth-child(2){
-            background: #01DC03;
-            right: 0;
-        }
-        section>.main:nth-child(3){
-            background: #FFEB0A;
-            bottom: 0;
-        }
-        section>.main:nth-child(4){
-            background: #FF00A0;
-            right: 0;
-            bottom: 0;
-        }
-        section>.main>div{
-            width: 11vw;
-            aspect-ratio: 1/1;
-            background: #F7F9F8;
-            border-radius: 100%;
-            position: absolute;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            top: 0;
-            margin: auto;
-        }
-        section>.main>div>div{
-            width: 5vw;
-            aspect-ratio: 1/1;
-            background: #E4181E;
-            position: absolute;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            top: 0;
-            margin: auto;
-        }
-        #mid-box {
-            width: 12vw;
-            aspect-ratio: 1/1;
-            background: #F7F9F8;
-            position: absolute;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            top: 0;
-            margin: auto;
-        }
-        #mid-circle{
-            width: 7vw;
-            aspect-ratio: 1/1;
-            background: #E4181E;
-            border-radius: 100%;
-            position: absolute;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            top: 0;
-            margin: auto;
-        }
-        .corner{
-            width: 14vw;
-            aspect-ratio: 1/1;
-            background: #F7F9F8;
-            border-radius: 100%;
-            position: absolute;
-        }
-        #corner1{
-            top: calc(-14vw/2);
-            left: calc(-14vw/2);
-        }
-        #corner2{
-            left: 0;
-            right: 0;
-            top: calc(-16vw/2);
-            margin: auto;
-        }
-        #corner3{
-            top: calc(-14vw/2);
-            right: calc(-14vw/2);
-        }
-        #corner4{
-            bottom: calc(-14vw/2);
-            left: calc(-14vw/2);
-        }
-        #corner5 {
-            left: 0;
-            right: 0;
-            bottom: calc(-16vw/2);
-            margin: auto;
-        }
-        #corner6{
-            bottom: calc(-14vw/2);
-            right: calc(-14vw/2);
-        }
-        body{
-            overflow: hidden;
-            margin: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="../normalize.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
 <section>
