--- a/Case-01/case_01.html
+++ b/Case-01/case_01.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Case_01-A$</title>
+    <meta name="author" content="Amidu Shamika">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../normalize.css">
-    <link rel="stylesheet" href="assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
 <body>
 <section>
@@ -13,12 +16,12 @@
     <div class="main"><div><div></div></div></div>
     <div class="main"><div><div></div></div></div>
 </section>
-    <div id="mid-box"><div id="mid-circle"></div></div>
-    <div class="corner" id="corner1"></div>
-    <div class="corner" id="corner2"></div>
-    <div class="corner" id="corner3"></div>
-    <div class="corner" id="corner4"></div>
-    <div class="corner" id="corner5"></div>
-    <div class="corner" id="corner6"></div>
+<div id="mid-box"><div id="mid-circle"></div></div>
+<div class="quarter" id="corner1"></div>
+<div class="half" id="corner2"></div>
+<div class="quarter" id="corner3"></div>
+<div class="quarter" id="corner4"></div>
+<div class="half" id="corner5"></div>
+<div class="quarter" id="corner6"></div>
 </body>
 </html>
