--- a/Case-02/case_02.html
+++ b/Case-02/case_02.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Case_02-A$</title>
-    <link rel="stylesheet" href="/normalize.css">
-    <link rel="stylesheet" href="assets/styles/style.css">
-    <link rel="stylesheet" href="/fontawesome/css/all.min.css">
+    <meta name="author" content="Amidu Shamika">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../normalize.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="../fontawesome/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
-    <img src="assets/images/Ijse_logo.png" title="ijse logo" alt="ijse logo" width="">
+    <img src="./assets/images/Ijse_logo.png" title="ijse logo" alt="ijse logo" width="">
     <nav>
         <dl>
             <dd><i class="fa-solid fa-house fa-bounce" style="color: #000000;"></i> Home</dd>
@@ -36,9 +38,9 @@
     </aside>
     <section>
         <div>
-            <div><img src="assets/images/monkey.gif" title="Monkey" alt="monkey.gif"></div>
-            <div><img src="assets/images/monkey.gif" title="Monkey" alt="monkey.gif"></div>
-            <div><img src="assets/images/monkey.gif" title="Monkey" alt="monkey.gif"></div>
+            <div><img src="./assets/images/monkey.gif" title="Monkey" alt="monkey.gif"></div>
+            <div><img src="./assets/images/monkey.gif" title="Monkey" alt="monkey.gif"></div>
+            <div><img src="./assets/images/monkey.gif" title="Monkey" alt="monkey.gif"></div>
         </div>
         <p>
             Monkeys are clever, social animals. They are known for running and leaping through trees with ease.
@@ -124,6 +126,6 @@
         <span><i class="fa-solid fa-copyright fa-beat" style="color: #ffffff;"></i> Developed By A$</span>
     </footer>
 </main>
-<script src="/fontawesome/js/all.min.js"></script>
+<script src="../fontawesome/js/all.min.js"></script>
 </body>
 </html>
