--- a/Case-03/case_03.html
+++ b/Case-03/case_03.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Case_03-A$</title>
-    <link rel="stylesheet" href="/normalize.css">
-    <link rel="stylesheet" href="assets/styles/style.css">
-    <link rel="stylesheet" href="/fontawesome/css/all.min.css">
+    <meta name="author" content="Amidu Shamika">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../normalize.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="../fontawesome/css/all.min.css">
 </head>
 <body>
 <div id="frame"><div></div></div>
@@ -15,6 +17,6 @@
     <div><span>Welcome To</span></div>
     <div><span>Institute of Software Engineering</span></div>
 </section>
-<script src="/fontawesome/js/all.min.js"></script>
+<script src="../fontawesome/js/all.min.js"></script>
 </body>
 </html>
