--- a/Case-04/case_04.html
+++ b/Case-04/case_04.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Case_04-A$</title>
-    <link rel="stylesheet" href="/normalize.css">
-    <link rel="stylesheet" href="assets/styles/style.css">
-    <link rel="stylesheet" href="/fontawesome/css/all.min.css">
+    <meta name="author" content="Amidu Shamika">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../normalize.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="../fontawesome/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
@@ -28,6 +30,6 @@
     <div class="TitleBar"><span>Card  4</span></div>
     <div><span>You..?</span></div>
 </section>
-<script src="/fontawesome/js/all.min.js"></script>
+<script src="../fontawesome/js/all.min.js"></script>
 </body>
 </html>
