--- a/Case-06/case_06.html
+++ b/Case-06/case_06.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Case_06-A$</title>
-    <link rel="stylesheet" href="/normalize.css">
-    <link rel="stylesheet" href="assets/styles/style.css">
-    <link rel="stylesheet" href="/fontawesome/css/all.min.css">
+    <meta name="author" content="Amidu Shamika">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../normalize.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="../fontawesome/css/all.min.css">
 </head>
 <body>
 <div>
@@ -19,6 +21,6 @@
     <div></div>
     <div></div>
 </div>
-<script src="/fontawesome/js/all.min.js"></script>
+<script src="../fontawesome/js/all.min.js"></script>
 </body>
 </html>
